<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.gatech.gtri.obm</groupId>
  <artifactId>NIST-OBM-Translator</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <alloy.version>5.1.0</alloy.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <pomsort.version>3.2.1</pomsort.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spotless.version>2.36.0</spotless.version>
    <omgutil.version>1.0.1</omgutil.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.26</version>
      <scope>provided</scope>
    </dependency>
    <!-- https://github.com/AlloyTools/org.alloytools.alloy/tree/v5.1.0 -->
    <!-- snapshots published at https://oss.sonatype.org/content/repositories/snapshots/org/alloytools/ -->
    <dependency>
      <groupId>org.alloytools</groupId>
      <artifactId>org.alloytools.alloy.application</artifactId>
      <version>5.1.0-SNAPSHOT</version>
    </dependency>
    <!-- see for documentation and configuration information: https://github.com/Ekryd/sortpom -->
    <dependency>
      <groupId>com.github.ekryd.sortpom</groupId>
      <artifactId>sortpom-maven-plugin</artifactId>
      <version>${pomsort.version}</version>
    </dependency>
    <dependency>
      <groupId>com.diffplug.spotless</groupId>
      <artifactId>spotless-maven-plugin</artifactId>
      <version>${spotless.version}</version>
    </dependency>
    <dependency>
      <groupId>edu.umd</groupId>
      <artifactId>omgutil3</artifactId>
      <version>${omgutil.version}</version>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <releases>
        <enabled>true</enabled>
        <checksumPolicy>ignore</checksumPolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>oss-sonatype</id>
      <name>oss-sonatype</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <repository>
      <releases>
        <enabled>true</enabled>
        <checksumPolicy>ignore</checksumPolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>omgutil</id>
      <name>GitHub Packages for omgutil</name>
      <url>https://maven.pkg.github.com/ontological-behavior-modeling/omgutil</url>
      <layout>default</layout>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <!-- see for documentation and configuration information: https://github.com/Ekryd/sortpom -->
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>${pomsort.version}</version>
        <configuration>
          <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>sort</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <!-- see for documentation and config: https://github.com/diffplug/spotless/tree/main/plugin-maven#google-java-format -->
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <java>
            <!-- These are the defaults, you can override if you want -->
            <includes>
              <include>src/main/java/**/*.java</include>
              <include>src/test/java/**/*.java</include>
            </includes>
            <googleJavaFormat>
              <version>1.8</version>
              <!-- optional, 1.8 is minimum supported version -->
              <style>GOOGLE</style>
              <!-- or AOSP (optional) -->
              <reflowLongStrings>true</reflowLongStrings>
              <!-- optional -->
              <!-- optional: custom group artifact (you probably don't need this) -->
              <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
            </googleJavaFormat>
          </java>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
